Gestion users (#5)
* face id

* profile picture upload

* reviews

* reviews with ai using fallbacks

* bad words protection : https://vector.profanity.dev